--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.18.0
   geocoding: ^2.0.5
   geolocator: ^9.0.2
+  shared_preferences: ^2.0.16
 
 dev_dependencies:
   flutter_test:
